alpm-srcinfo/tests/parse_error_snapshots/invalid_architecture.snap
---
source: alpm-srcinfo/tests/parse_errors.rs
description: "pkgbase = test\n    pkgver = 1.0.0\n\tpkgrel = 1\n    arch = my_special_arch\n\n# Missing pkgname section.\n\n"
expression: "format!(\"{error}\")"
---
File parsing error:
parse error at line 4, column 12
  |
4 |     arch = my_special_arch
  |            ^
invalid architecture
expected `aarch64`, `any`, `arm`, `armv6h`, `armv7h`, `i386`, `i486`, `i686`, `pentium4`, `riscv32`, `riscv64`, `x86_64`, `x86_64_v2`, `x86_64_v3`, `x86_64_v4`
Matching variant not found
